@@ -1,27 +1,42 @@
 ### OpenCOBOL Test Suite				-*- m4 -*-
 
-## Copyright (C) 2003-2004 Keisuke Nishida
+## Copyright (C) 2004 Keisuke Nishida
 ##
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
 ## the Free Software Foundation; either version 2, or (at your option)
 ## any later version.
-## 
+##
 ## This program is distributed in the hope that it will be useful,
 ## but WITHOUT ANY WARRANTY; without even the implied warranty of
 ## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ## GNU General Public License for more details.
-## 
+##
 ## You should have received a copy of the GNU General Public License
 ## along with this software; see the file COPYING.  If not, write to
 ## the Free Software Foundation, Inc., 59 Temple Place, Suite 330,
 ## Boston, MA 02111-1307 USA
 
-AT_INIT([Data Representation])
+
+AT_SETUP([POINTER: display])
 
-AT_TESTED([cobc])
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       01 PTR           USAGE POINTER VALUE NULL.
+       PROCEDURE        DIVISION.
+           DISPLAY PTR.
+           SET PTR UP BY 1
+           DISPLAY PTR.
+           STOP RUN.
+])
 
-m4_include([binary.at])		# USAGE BINARY
-m4_include([display.at])	# USAGE DISPLAY
-m4_include([packed.at])		# USAGE PACKED-DECIMAL
-m4_include([pointer.at])	# USAGE POINTER
+AT_CHECK([${COMPILE} -o prog prog.cob])
+AT_CHECK([./prog], [0],
+[0000000000
+0000000001
+])
+
+AT_CLEANUP
