@@ -1,3 +1,11 @@
+2004-03-06  Keisuke Nishida  <knishida@wind.sannet.ne.jp>
+
+	* data-rep.src/pointer.at: New file.
+
+2004-03-01  Keisuke Nishida  <knishida@wind.sannet.ne.jp>
+
+	* Reorganized tests into run.src, syntax.src, and data-rep.src.
+
 2003-11-26  Keisuke Nishida  <kxn30@yahoo.co.jp>
 
 	* cobol2002-run.src, cobol2002-syntax.src, data-rep.src,
